// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthFields component should render for basic auth 1`] = `<BasicAuthFields />`;

exports[`AuthFields component should render for oauth 1`] = `<OAuth2Fields />`;

exports[`AuthFields component should render null for unknown auth 1`] = `""`;

exports[`EventCheckboxes component should render with events 1`] = `
<div
  className="CheckboxGrid"
>
  <div
    key="testKeyA"
  >
    <Tooltip
      content="A longer description for test event A"
      dark={true}
    >
      <Field
        component={[Function]}
        disabled={false}
        label="Test Display Name A"
        name="events.testKeyA"
        type="checkbox"
      />
    </Tooltip>
  </div>
  <div
    key="testKeyB"
  >
    <Tooltip
      content="A longer description for test event B"
      dark={true}
    >
      <Field
        component={[Function]}
        disabled={false}
        label="Test Display Name B"
        name="events.testKeyB"
        type="checkbox"
      />
    </Tooltip>
  </div>
  <div
    key="testKeyC"
  >
    <Tooltip
      content="A longer description for test event C"
      dark={true}
    >
      <Field
        component={[Function]}
        disabled={false}
        label="Test Display Name C"
        name="events.testKeyC"
        type="checkbox"
      />
    </Tooltip>
  </div>
</div>
`;

exports[`Webhooks Form Component auth should render basic auth fields 1`] = `
Array [
  <AuthDropDown
    disabled={false}
  />,
  <AuthFields
    authType="basic"
    disabled={false}
  />,
]
`;

exports[`Webhooks Form Component auth should render basic oauth2 fields 1`] = `
Array [
  <AuthDropDown
    disabled={false}
  />,
  <AuthFields
    authType="oauth2"
    disabled={false}
  />,
]
`;

exports[`Webhooks Form Component should render correctly 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Panel.Section>
    <Stack>
      <NameField
        disabled={false}
      />
      <TargetField
        disabled={false}
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <Stack>
      <EventsRadioGroup
        disabled={false}
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <Stack>
      <AuthDropDown
        disabled={false}
      />
      <AuthFields
        authType={null}
        disabled={false}
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <ActiveField
      disabled={false}
    />
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      submit={true}
      variant="primary"
    >
      Update Webhook
    </Button>
  </Panel.Section>
</form>
`;

exports[`Webhooks Form Component should show events checkboxes 1`] = `
Array [
  <EventsRadioGroup
    disabled={false}
  />,
  undefined,
]
`;

exports[`Webhooks Form Component should subaccount section if subaccounts exist 1`] = `
<Connect(SubaccountSection)
  disabled={false}
  formName="webhookForm"
  newWebhook={false}
/>
`;
